fix: NavBar.module.css NavLink items white space not to break and text-align: center

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -5,6 +5,15 @@
 
 .NavLink {
     padding: 5px;
+    text-align: center;
+}
+
+.BreakableText {
+    display: inline;
+    white-space: nowrap;
+    /* Prevents "Sign out" from breaking onto two lines */
+    margin-left: 0.5rem;
+    /* Adds spacing between icon and text */
 }
 
 .Active i {
